Added transliteration code and copied all macros ans templtes ferom wiki to files.

--- a/plugins/kottapalli/macros/Audio.html
+++ b/plugins/kottapalli/macros/Audio.html
@@ -18,3 +18,5 @@ $else:
     
     so.write("audio_player");
 </script>
+<br/>
+<a href="$path.replace("/static/", "/download/")" rel="nofollow">Download this song</a>
