--- a/plugins/kottapalli/macros/rightsidebar.html
+++ b/plugins/kottapalli/macros/rightsidebar.html
@@ -1,10 +1,23 @@
 $def with ()
 
-$ issues = get_issues(published=True)
+$ issues = get_issues()
 
 <div id = "rightsidebar">
 
  <div class="menu">
+  <ul>
+ 
+  <form action="/search" id="cse-search-box">
+  <div>
+    <input type="hidden" name="cx" value="009835399929480396310:lzf1keomgj0" />
+    <input type="hidden" name="cof" value="FORID:9" />
+    <input type="hidden" name="ie" value="UTF-8" />
+    <li><input type="text" name="q" size="15" />
+    <input type="submit" name="sa" value="Search" /></li>
+  </div>
+</form>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&lang=te"></script>
+  </ul>
   <ul>
   <li><a href="/మా గురించి">మా గురించి</a></li>
   <li><a href="mailto:team@kottapalli.in">సంప్రదించండి</a></li>
@@ -23,21 +36,4 @@ $ issues = get_issues(published=True)
  <div class="ads">
  $:macros.notes("")
  </div>
-
-$if ctx.user:
-    $ issues = get_issues(published=False)
-    <div class="menu">
-        <b>అప్రచురిత సంచికలు</b><br/>
-        <ul>
-        $for issue in issues:
-            <li><a href="$issue.key">$issue.name</a></li>
-         </ul>
-    </div>
-
-$if not ctx.user:
-    <div class="menu">
-       <b>Admin</b><br/>
-        <a href="/account/login">Login</a>
-    </div>
-
 </div>
