Added kottapalli chaatimpu google group. User can subscribe to this group directly from site

--- a/plugins/kottapalli/macros/rightsidebar.html
+++ b/plugins/kottapalli/macros/rightsidebar.html
@@ -12,10 +12,11 @@ $ issues = get_issues()
     <input type="hidden" name="cx" value="009835399929480396310:lzf1keomgj0" />
     <input type="hidden" name="cof" value="FORID:9" />
     <input type="hidden" name="ie" value="UTF-8" />
-    <li><input type="text" name="q" size="15" />
-    <input type="submit" name="sa" value="Search" /></li>
+    <li><input type="text" name="q" size="15" /></li>
+    <li><input id="submit_button" type="submit" name="sa" value="వెతుకు" /></li>
   </div>
 </form>
+<br/>
 <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&lang=te"></script>
   </ul>
   <ul>
@@ -31,9 +32,31 @@ $ issues = get_issues()
       $else:
           <li><a href="${i.key}/welcome">$i.name</a></li>
   </ul>
- </div>
 
  <div class="ads">
  $:macros.notes("")
  </div>
+<br/>
+ <div class="groupAnnounce">  
+  <img src="http://groups.google.com/groups/img/3nb/groups_bar.gif"
+         alt="Google Groups"><br/>
+
+ <table border=0 style="background-color: #D9E1E5; width: 100%;" cellspacing=0>
+  <tr><td>
+  </td></tr>
+  <tr><td style="padding-left: 5px">
+  <b>కొత్తపల్లి చాటింపు గుంపులో చేరండి</b>
+  </td></tr>
+    <tr><td style="padding-left: 5px;">
+  <form action="http://groups.google.com/group/kottapalli/boxsubscribe">
+    <ul><li>Email: <input type=text name=email style="width: 90%"></li>
+    <li><input id="submit_button" type=submit name="sub" value="చేరండి"></li></ul>
+  </form>
+    </td></tr>
+<tr><td align=right>
+  <a href="http://groups.google.com/group/kottapalli">ఈ గుంపును చూడండి</a>
+</td></tr>
+</table>
+</div>
+</div>
 </div>
