--- a/plugins/kottapalli/macros/searchBox.html
+++ b/plugins/kottapalli/macros/searchBox.html
@@ -6,7 +6,7 @@ $def with ()
     <input type="hidden" name="cx" value="009835399929480396310:lzf1keomgj0" />
     <input type="hidden" name="cof" value="FORID:9" />
     <input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" size="20" style="verticle-align:top;height:15px" id="search_box"/>
+    <input type="text" name="q" size="20"  id="search_box"/>
     <input id="submit_button" type="submit" name="sa" value="వెతుకు" />
   </div>
 </form>
