added quillpad js and modified the corresponding comment form fields

--- a/plugins/kottapalli/macros/commentBox.html
+++ b/plugins/kottapalli/macros/commentBox.html
@@ -35,26 +35,22 @@ close();
 </h2>
 <div id="newComment" style="display: none;">
 <form method="POST" name="edit" id="commentForm" action="/addComment">
-<ul>
-<li>భాష మార్చుటకు Esc కీ నొక్కండి</li>
-<li><a href='javascript:showMap()'>తెలుగు కీ బోర్డు</a></li>
-</ul>
 <table style="width: 100%;">
 <tr>
 <td><label for="author"><small>పేరు</small></label></td>
-<td><input type="text" id="input_author" name="author" value="" /></td>
+<td><input type="text" id="input_author" name="author" value="" quillpad="true" /></td>
 </tr>
 <tr>
 <td><label for = "website"><small>వెబ్సైటు</small></label></td>
-<td><input type="text" id="input_website" name="website" value="" /></td>
+<td><input type="text" id="input_website" name="website" value="" quillpad="true" /></td>
 </tr>
 <tr>
 <td><label for = "email"><small>ఈ-మెయిలు</small></label></td>
-<td><input type="text" id="input_email" name="email" value="" /></td>
+<td><input type="text" id="input_email" name="email" value="" quillpad="true" /></td>
 </tr>
 <tr>
 <td><label for="comment"><small>వ్యాఖ్య</small></label></p></td>
-<td><textarea name="comment" rows="5" id = "input_comment" style="width: 100%;"></textarea></td>
+<td><textarea name="comment" rows="5" id = "input_comment" style="width: 100%;" quillpad="true"></textarea></td>
 </tr>
 
 <tr>
